# template_package

./: .gitignore  LICENSE  PROJECT_NAME.service  README.md  [project_name].service  build+.bat  install.bat  install.sh  main_PROJECT_NAME.py  main_[project_name].py  pyproject.toml  scaffold.py  start.sh  stop.sh
src/[project_name]/: about.py  base_consumer.py  config.py  event_consumer.py
src/project_name/: about.py  config.py
