[build-system]
requires = [
	"setuptools >= 65",
	"wheel >= 0.38"
]
build-backend = "setuptools.build_meta"

[project]
name = "<PROJECT_NAME>"
version = "0.0.1"
authors = [
  { name="<AUTHOR>", email="<AUTHOR@DOMAIN.NAME>" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}

dependencies = [
	"python-decouple >= 3.8",
]

[project.optional-dependencies]
test = [
    "pytest >= 5.0.0",
]
doc = [
    "sphinx",
]

[project.urls]
Homepage = "https://github.com/licndecl/<ВИД ПРОДУКТА>_<PROJECT_NAME>"
Documentation = "https://<ВИД ПРОДУКТА>_<PROJECT_NAME>.readthedocs.io/ru/latest"
#Repository = "https://github.com/<AUTHOR>/spam.git"
#Issues = "https://github.com/<AUTHOR>/spam/issues"
#Changelog = "https://github.com/licndecl/<ВИД ПРОДУКТА>_<PROJECT_NAME>/CHANGELOG.md"
