[build-system]
requires = [
	"setuptools >= 65",
	"wheel >= 0.38"
]
build-backend = "setuptools.build_meta"

[project]
name = "<project_name>"
version = "<version>"
authors = [
  { name="<author>", email="<author_email>" },
]
description = "<description>"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}

dependencies = [
    "python-decouple >= 3.8",
    "moslic_db >= 0.0.4",
    "moslic_queue >= 0.0.5",
]

[project.optional-dependencies]
test = [
    "pytest >= 5.0.0",
]
doc = [
    "sphinx",
]

[project.urls]
Homepage = "https://github.com/licndecl/<product_type>_<project_name>"
Documentation = "https://<product_type>_<project_name>.readthedocs.io/ru/latest"
#Repository = "https://github.com/<author>/spam.git"
#Issues = "https://github.com/<author>/spam/issues"
#Changelog = "https://github.com/licndecl/<product_type>_<project_name>/CHANGELOG.md"
